# OCT_Agent

./: .gitignore  AGENT.md  CLAUDE.md  Makefile  README.md  strain_estimation.ipynb
assets/bnn/: bunetPP.py  concrete_dropout.py  test.py  train.py
assets/cnn/: Unet.py  test.py  train.py
backend/: README.md  langgraph.json  pyproject.toml
backend/src/agent/: __init__.py  app.py  config.py  graph.py  prompts.py  schemas.py  self_rag.py  tools.py
backend/src/agent/research/: __init__.py  graph.py  schemas.py  sources.py
backend/src/agent/services/: __init__.py  mat_io.py  memory.py  models.py  paths.py  storage.py
backend/src/agent/utils/: __init__.py  messages.py  structured.py
backend/src/self_rag_engine/: __init__.py  alignment.py  chunking.py  citations.py  cleaning.py  cli.py  config.py  docling_parser.py  document_parser.py  graph.py  grobid_parser.py  ingestion.py  llm.py  memory_store.py  parent_store.py  prompts.py  rerank.py  retrieval.py  text_utils.py  types.py
backend/tests/: test_batch_ingestion.py  test_chunking_roles.py  test_cleaning.py  test_docling_options.py  test_docling_parser.py  test_graph.py  test_grobid_parser.py  test_mojibake.py  test_parent_child_ingestion.py  test_parent_expansion.py  test_pdf_parse_fallback.py  test_rerank.py  test_services.py  test_text_utils.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: CodeBlock.tsx  ConversationSidebar.tsx  FileUploader.tsx  HeatmapViewer.tsx  MessageContent.tsx  MethodPanel.tsx  ResultGallery.tsx  WelcomeScreen.tsx
frontend/src/lib/: api.ts
frontend/src/types/: api.ts
scripts/: test_structured_output.py
