[project]
name = "oct-agent-backend"
version = "0.1.0"
description = "LangGraph and FastAPI backend for OCT strain estimation"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "chromadb>=0.5.0",
    "docling>=2.0.0",
    "fastapi>=0.115.0",
    "jieba>=0.42.1",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.6",
    "langgraph-api",
    "langgraph-cli[inmem]>=0.1.71",
    "numpy>=2.0.0",
    "openai>=1.0.0",
    "pdfplumber>=0.11.0",
    "python-dotenv>=1.0.1",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.20",
    "PyPDF2>=3.0.0",
    "rank-bm25>=0.2.2",
    "scipy>=1.13.0",
    "tavily-python>=0.5.0",
    "torch",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", ".."]
testpaths = ["tests"]
